Land generation basically finished. Working on water.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
     <script src="js/World.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
     <style>
+    .axis {
+      background-color:grey;
+    }
+    .blue {
+      background-color: blue;
+    }
     .cell{
       float:left;
-      width:2px;
-			height:2px;
+      width:4px;
+			height:4px;
 
 			text-align:center;
 		}
+    .green{
+      background-color: green;
+    }
     .neutral {
-      background-color:grey;
+      background-color:black;
 
     }
     .red {
@@ -20,6 +29,9 @@
     .row{
       clear:both;
 
+    }
+    .yellow{
+      background-color: yellow;
     }
     </style>
 </head>
